# tinyhands

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .mailmap  .nfs00000000034c0d9b00000041  .pre-commit-config.yaml  Dockerfile  Dockerfile-js-cli  Dockerfile-nginx  README.md  Vagrantfile  accounts.json  build-and-push-containers.sh  build-and-run.sh  build-containers.sh  clone_file_backups_to_azure.sh  codeship-services.yml  codeship-steps.yml  common.env  common.yml  deploycfg.encrypted  deploycfg.env.encrypted  diff_output.txt  docker-compose.yml  docker-entrypoint.sh  dockercfg.encrypted  dreamsuite_tag  git-summary.sh  git-uncommitted-summary.sh  interceptees.json  karma.conf.js  loadData.sh  local.env.dist  notes.txt  old-analysis.md  package.json  prod-crontab.txt  production.yml  progress.txt  (+11 more)
.github/: CODEOWNERS
accounts/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
analysis/: README.md  accounts.md  app_analysis_data.json  app_architecture_data.json  app_issues_data.json  budget.md  dataentry.md  events.md  export_import.md  firebase.md  help.md  id_matching.md  legal.md  portal.md  reproduce_analysis.md  rest_api.md  util.md  (+3 more)
app/: app.js
application/casedispatcher_sl/: .gitignore  README.md  app.py  case_dispatcher_ui.py  hello.py  install.sh  pyproject.toml
application/casedispatcher_sl/libraries/: case_dispatcher_model.py  data_prep.py  entity_model.py  google_lib.py
application/casedispatcher_sl/pages/: collect_model_data.py  irf_evaluation.py  model_build.py  model_stats.py  update_casedispatcher_sheets.py
(+1852 files in other folders)
