[project]
name = "casedispatcher-sl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.160.0",
    "gspread>=6.1.4",
    "llama-index>=0.12.17",
    "matplotlib>=3.10.0",
    "oauth2client>=4.1.3",
    "pip>=25.0.1",
    "psycopg2-binary>=2.9.10",
    "streamlit>=1.42.0",
]
