[project]
name = "casedispatcher-sl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair-saver>=0.5.0",
    "google-api-python-client>=2.160.0",
    "gspread>=6.1.4",
    "llama-index>=0.12.17",
    "matplotlib>=3.10.0",
    "numpy==2.1",
    "oauth2client>=4.1.3",
    "pip>=25.0.1",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.6.1",
    "shap>=0.46.0",
    "st-pages>=1.0.1",
    "streamlit>=1.42.0",
    "vl-convert-python>=1.7.0",
]
[tool.setuptools]
packages = ["pages", "libraries"]
